crates/forge_tool/src/snapshots/forge_tool__tool_engine__test__fs_file_info.snap
---
source: crates/forge_tool/src/tool_engine.rs
expression: tool_str
---
{
  "name": "fs_file_info",
  "description": "Request to retrieve detailed metadata about a file or directory at the specified path. Returns comprehensive information including size, creation time, last modified time, permissions, and type. Use this when you need to understand file characteristics without reading the actual content. Parameters: - path: (required) The path of the file or directory to inspect (relative to the current working directory ./test-dir) Usage: <fs_file_info> <path>File or directory path here</path> </fs_file_info>",
  "input_schema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "title": "FSFileInfoInput",
    "type": "object",
    "required": [
      "path"
    ],
    "properties": {
      "path": {
        "description": "The path of the file or directory to inspect (relative to the current working directory ./test-dir)",
        "type": "string"
      }
    }
  },
  "output_schema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "title": "String",
    "type": "string"
  }
}
