crates/forge_tool/src/snapshots/forge_tool__tool_engine__test__fs_write.snap
---
source: crates/forge_tool/src/tool_engine.rs
expression: tool_str
---
{
  "name": "fs_write",
  "description": "Request to write content to a file at the specified path. If the file exists, it will be overwritten with the provided content. If the file doesn\\'t exist, it will be created. This tool will automatically create any directories needed to write the file. Parameters: - path: (required) The path of the file to write to (relative to the current working directory /Users/test) - content: (required) The content to write to the file. ALWAYS provide the COMPLETE intended content of the file, without any truncation or omissions. You MUST include ALL parts of the file, even if they haven\\'t been modified. Usage: <fs_write> <path>File path here</path> <content> Your file content here </content> </fs_write>",
  "input_schema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "title": "FSWriteInput",
    "type": "object",
    "required": [
      "content",
      "path"
    ],
    "properties": {
      "content": {
        "description": "The content to write to the file. ALWAYS provide the COMPLETE intended content of the file, without any truncation or omissions. You MUST include ALL parts of the file, even if they haven't been modified.",
        "type": "string"
      },
      "path": {
        "description": "The path of the file to write to (relative to the current working directory /Users/test)",
        "type": "string"
      }
    }
  },
  "output_schema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "title": "String",
    "type": "string"
  }
}
