crates/forge_tool/src/snapshots/forge_tool__tool_engine__test__test_generated_description_fs_file_info.snap
---
source: crates/forge_tool/src/tool_engine.rs
expression: tool_str
---
Tool: fs_file_info
Description: Request to retrieve detailed metadata about a file or directory at the specified path. Returns comprehensive information including size, creation time, last modified time, permissions, and type. Use this when you need to understand file characteristics without reading the actual content. Parameters: - path: (required) The path of the file or directory to inspect (relative to   the current working directory /Users/test)
Input Parameters:
- path: The path of the file or directory to inspect (relative to the current working directory /Users/test)
Output Parameters:
