crates/forge_tool/src/snapshots/forge_tool__tool_engine__test__test_generated_description_fs_list.snap
---
source: crates/forge_tool/src/tool_engine.rs
expression: tool_str
---
Tool: fs_list
Description: Request to list files and directories within the specified directory. If recursive is true, it will list all files and directories recursively. If recursive is false or not provided, it will only list the top-level contents. Do not use this tool to confirm the existence of files you may have created, as the user will let you know if the files were created successfully or not. Parameters: - path: (required) The path of the directory to list contents for (relative   to the current working directory /Users/test) - recursive: (optional) Whether to list files recursively. Use true for   recursive listing, false or omit for top-level only.
Input Parameters:
- path: The path of the directory to list contents for (relative to the current working directory /Users/test)
- recursive: Whether to list files recursively. Use true for recursive listing, false or omit for top-level only.
Output Parameters:
- array:
