crates/forge_tool/src/snapshots/forge_tool__tool_engine__test__test_generated_description_fs_read.snap
---
source: crates/forge_tool/src/tool_engine.rs
expression: tool_str
---
Tool: fs_read
Description: Request to read the contents of a file at the specified path. Use this when you need to examine the contents of an existing file you do not know the contents of, for example to analyze code, review text files, or extract information from configuration files. Automatically extracts raw text from PDF and DOCX files. May not be suitable for other types of binary files, as it returns the raw content as a string. Parameters: - path: (required) The path of the file to read (relative to the current   working directory /Users/test)
Input Parameters:
- path: The path of the file to read (relative to the current working directory /Users/test)
Output Parameters:
