crates/forge_tool/src/snapshots/forge_tool__tool_engine__test__test_generated_description_fs_search.snap
---
source: crates/forge_tool/src/tool_engine.rs
expression: tool_str
---
Tool: fs_search
Description: Request to perform a regex search across files in a specified directory, providing context-rich results. This tool searches for patterns or specific content across multiple files, displaying each match with encapsulating context. Parameters: - path: (required) The path of the directory to search in (relative to the   current working directory /Users/test). This directory will be recursively   searched. - regex: (required) The regular expression pattern to search for. Uses Rust   regex syntax. - file_pattern: (optional) Glob pattern to filter files (e.g., \'*.ts\' for   TypeScript files). If not provided, it will search all files (*).
Input Parameters:
- file_pattern: Glob pattern to filter files (e.g., '*.ts' for TypeScript files). If not provided, it will search all files (*).
- path: The path of the directory to search in (relative to the current working directory /Users/test). This directory will be recursively searched.
- regex: The regular expression pattern to search for. Uses Rust regex syntax.
Output Parameters:
- array:
