crates/forge_tool/src/snapshots/forge_tool__tool_engine__test__test_generated_description_fs_write.snap
---
source: crates/forge_tool/src/tool_engine.rs
expression: tool_str
---
Tool: fs_write
Description: Request to write content to a file at the specified path. If the file exists, it will be overwritten with the provided content. If the file doesn\'t exist, it will be created. This tool will automatically create any directories needed to write the file. Parameters: - path: (required) The path of the file to write to (relative to the current   working directory /Users/test) - content: (required) The content to write to the file. ALWAYS provide the   COMPLETE intended content of the file, without any truncation or   omissions. You MUST include ALL parts of the file, even if they haven\'t   been modified.
Input Parameters:
- content: The content to write to the file. ALWAYS provide the COMPLETE intended content of the file, without any truncation or omissions. You MUST include ALL parts of the file, even if they haven't been modified.
- path: The path of the file to write to (relative to the current working directory /Users/test)
Output Parameters:
